2011-04-26  James Robinson  <jamesr@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] Only reset tiles if the LayerRendererChromium is actually changing
        https://bugs.webkit.org/show_bug.cgi?id=59572

        http://trac.webkit.org/changeset/84981/ caused us to reset the tiles
        when LayerRendererChromium was set.  We set this pointer every frame
        and should only reset the tiles if the new LayerRendererChromium is
        different from the old one (indicating a context loss), not just reset
        on every frame.

        * platform/graphics/chromium/LayerTilerChromium.cpp:
        (WebCore::LayerTilerChromium::setLayerRenderer):
        * platform/graphics/chromium/LayerTilerChromium.h:

2011-04-26  Dinesh K Garg  <dineshg@codeaurora.org>

        Reviewed by Eric Seidel.

        beginElement broken by setAttribute
        https://bugs.webkit.org/show_bug.cgi?id=26019

        Test: svg/animations/animate-beginElementAt.svg

        * svg/SVGAnimationElement.cpp:
        (WebCore::SVGAnimationElement::attributeChanged):
        Reset the animation state here as the rest of the code reads it and would still
        think we are animating when we are not.

        * svg/animation/SVGSMILElement.h:
        (WebCore::SVGSMILElement::setInactive): Helper function to reset the state.

2011-04-26  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r84989.
        http://trac.webkit.org/changeset/84989
        https://bugs.webkit.org/show_bug.cgi?id=59566

        REGRESSION (r84989): Lots of vertical text tests failing on
        windows (Requested by weinig on #webkit).

        * platform/graphics/FontPlatformData.h:
        * platform/graphics/win/FontCacheWin.cpp:
        (WebCore::FontCache::getFontDataForCharacters):
        (WebCore::FontCache::createFontPlatformData):
        * platform/graphics/win/FontCustomPlatformData.cpp:
        (WebCore::FontCustomPlatformData::fontPlatformData):