@@ -1,3 +1,14 @@
+2011-04-27  Nate Chapin  <japhet@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        Don't use XMLTreeViewer when script is disabled (it uses Javascript
+        to build a prettified version of the xml document).
+        https://bugs.webkit.org/show_bug.cgi?id=59113
+
+        * xml/XMLTreeViewer.cpp:
+        (WebCore::XMLTreeViewer::transformDocumentToTreeView):
+
 2011-04-26  James Robinson  <jamesr@chromium.org>
 
         Reviewed by Kenneth Russell.
